TEST_PROGRAMS/VALID/05/empty_multi-line_comment.go
/* Empty multi-line comment. */

package main

var x int

/**/

func main() {
	print(x)
}
