TEST_PROGRAMS/INVALID/05/nested_multi-line_comment.go
/* Nested multi-line comment. */

package main

// Error: nested multi-line comment
/* Nested /* Comment */ */

func main() {
  
}
